package com.design.creation.factory;

/**
 * @program: Design Patterns
 * @Date: 2020/9/24 21:59
 * @Author: Mr.Shen
 * 抽象产品（Product）：定义了产品的规范，描述了产品的主要特性和功能
 */
public interface Product {
    void show();
}
